--- a/src/govuk/components/pagination/template.njk
+++ b/src/govuk/components/pagination/template.njk
@@ -9,11 +9,8 @@
         <span class="govuk-pagination__link-title">
           <svg class="govuk-pagination__icon" xmlns="http://www.w3.org/2000/svg" height="13" width="17">
             <path d="m6.5938-0.0078125-6.7266 6.7266 6.7441 6.4062 1.377-1.449-4.1856-3.9768h12.896v-2h-12.984l4.2931-4.293-1.414-1.414z"></path>
-          </svg>
-          {%- if params.previous.text %}
-          {{ params.previous.text }}
-          {% else %}
-          Previous <span class="govuk-visually-hidden">page</span>
+          </svg>{%- if params.previous.text %}{{ params.previous.text }}{% else %}Previous
+          <span class="govuk-visually-hidden">page</span>
           {% endif -%}
         </span>
         {%- if params.previous.label %}
