--- a/src/govuk/components/pagination/_index.scss
+++ b/src/govuk/components/pagination/_index.scss
@@ -144,7 +144,7 @@
   .govuk-pagination__list--block {
     .govuk-pagination__list {
       display: block;
-      text-align: justify;
+      text-align: left;
     }
 
     .govuk-pagination__item--prev,
