make elipses non-interactive, so they don't obscure the target of the link to their left

--- a/src/govuk/components/pagination/_index.scss
+++ b/src/govuk/components/pagination/_index.scss
@@ -97,6 +97,7 @@
     padding-right: 0;
     padding-left: 0;
     color: $govuk-secondary-text-colour;
+    pointer-events: none;
   }
 
   .govuk-pagination__item--prev .govuk-pagination__link:before {
