Give text inputs in error a unique ID
with the existing implementation, each text input in error had
the same id. When testing with NVDA 2021.2 + Firefox, this meant that
when a user tabbed to the text input, they would hear every single label
with `for="input-with-error-message"`, e.g:

```
<h1> govuk-label--xl <h1> govuk-label--l <h1> govuk-label--m <h1> govuk-label--s <h1> No class <label> govuk-label--xl <label> govuk-label--l <label> govuk-label--m <label> govuk-label--s <label> No class  edit  has auto complete
```

This commit replaces the duplicate id's with unique ones to stop this happening

--- a/app/views/examples/labels-legends-and-headings/index.njk
+++ b/app/views/examples/labels-legends-and-headings/index.njk
@@ -266,7 +266,7 @@
     "hint": {
       "html": "It’s on your National Insurance card, benefit letter, payslip or P60. For example, ‘QQ 12 34 56 C’."
     },
-    "id": "input-with-error-message",
+    "id": "text-input-heading-hint-error-xl",
     "name": "text-input-heading-hint-error-xl",
     "errorMessage": {
       "text": "Error message goes here"
@@ -282,7 +282,7 @@
     "hint": {
       "html": "It’s on your National Insurance card, benefit letter, payslip or P60. For example, ‘QQ 12 34 56 C’."
     },
-    "id": "input-with-error-message",
+    "id": "text-input-heading-hint-error-l",
     "name": "text-input-heading-hint-error-l",
     "errorMessage": {
       "text": "Error message goes here"
@@ -298,7 +298,7 @@
     "hint": {
       "html": "It’s on your National Insurance card, benefit letter, payslip or P60. For example, ‘QQ 12 34 56 C’."
     },
-    "id": "input-with-error-message",
+    "id": "text-input-heading-hint-error-m",
     "name": "text-input-heading-hint-error-m",
     "errorMessage": {
       "text": "Error message goes here"
@@ -314,7 +314,7 @@
     "hint": {
       "html": "It’s on your National Insurance card, benefit letter, payslip or P60. For example, ‘QQ 12 34 56 C’."
     },
-    "id": "input-with-error-message",
+    "id": "text-input-heading-hint-error-s",
     "name": "text-input-heading-hint-error-s",
     "errorMessage": {
       "text": "Error message goes here"
@@ -330,7 +330,7 @@
     "hint": {
       "html": "It’s on your National Insurance card, benefit letter, payslip or P60. For example, ‘QQ 12 34 56 C’."
     },
-    "id": "input-with-error-message",
+    "id": "text-input-heading-hint-error-no-class",
     "name": "text-input-heading-hint-error-no-class",
     "errorMessage": {
       "text": "Error message goes here"
@@ -347,7 +347,7 @@
     "hint": {
       "html": "It’s on your National Insurance card, benefit letter, payslip or P60. For example, ‘QQ 12 34 56 C’."
     },
-    "id": "input-with-error-message",
+    "id": "text-input-hint-error-xl",
     "name": "text-input-hint-error-xl",
     "errorMessage": {
       "text": "Error message goes here"
@@ -362,7 +362,7 @@
     "hint": {
       "html": "It’s on your National Insurance card, benefit letter, payslip or P60. For example, ‘QQ 12 34 56 C’."
     },
-    "id": "input-with-error-message",
+    "id": "text-input-hint-error-l",
     "name": "text-input-hint-error-l",
     "errorMessage": {
       "text": "Error message goes here"
@@ -377,7 +377,7 @@
     "hint": {
       "html": "It’s on your National Insurance card, benefit letter, payslip or P60. For example, ‘QQ 12 34 56 C’."
     },
-    "id": "input-with-error-message",
+    "id": "text-input-hint-error-m",
     "name": "text-input-hint-error-m",
     "errorMessage": {
       "text": "Error message goes here"
@@ -392,7 +392,7 @@
     "hint": {
       "html": "It’s on your National Insurance card, benefit letter, payslip or P60. For example, ‘QQ 12 34 56 C’."
     },
-    "id": "input-with-error-message",
+    "id": "text-input-hint-error-s",
     "name": "text-input-hint-error-s",
     "errorMessage": {
       "text": "Error message goes here"
@@ -407,7 +407,7 @@
     "hint": {
       "html": "It’s on your National Insurance card, benefit letter, payslip or P60. For example, ‘QQ 12 34 56 C’."
     },
-    "id": "input-with-error-message",
+    "id": "text-input-hint-error-no-class",
     "name": "text-input-hint-error-no-class",
     "errorMessage": {
       "text": "Error message goes here"
