Replace text input blank `id` with unique value
The `id` for text input examples were being set to a blank string.
This was leading to text inputs having an `id` (and therefore an `aria-describedby`)
starting with a dash, i.e: `id="-hint"`. Each text input also had the same `id`.

This commit replaces the blank `id` and uses the same value as the `name` so each
text input has a unique `id`.

--- a/app/views/examples/labels-legends-and-headings/index.njk
+++ b/app/views/examples/labels-legends-and-headings/index.njk
@@ -27,7 +27,7 @@
       isPageHeading: true,
       classes: 'govuk-label--xl '
     },
-    "id": "",
+    "id": "text-input-heading-xl",
     "name": "text-input-heading-xl"
   }) }}
 
@@ -37,7 +37,7 @@
       isPageHeading: true,
       classes: 'govuk-label--l '
     },
-    "id": "",
+    "id": "text-input-heading-l",
     "name": "text-input-heading-l"
   }) }}
 
@@ -47,7 +47,7 @@
       isPageHeading: true,
       classes: 'govuk-label--m '
     },
-    "id": "",
+    "id": "text-input-heading-m",
     "name": "text-input-heading-m"
   }) }}
 
@@ -57,7 +57,7 @@
       isPageHeading: true,
       classes: 'govuk-label--s '
     },
-    "id": "",
+    "id": "text-input-heading-s",
     "name": "text-input-heading-s"
   }) }}
 
@@ -67,8 +67,8 @@
       isPageHeading: true,
       classes: ''
     },
-    "id": "",
-    "name": "text-input-no-class"
+    "id": "text-input-heading-no-class",
+    "name": "text-input-heading-no-class"
   }) }}
 
   <h3 class="govuk-heading-s">isPageHeading: false</h3>
@@ -78,7 +78,7 @@
       "text": "<label> govuk-label--xl",
       classes: 'govuk-label--xl '
     },
-    "id": "",
+    "id": "text-input-xl",
     "name": "text-input-xl"
   }) }}
 
@@ -87,7 +87,7 @@
       "text": "<label> govuk-label--l",
       classes: 'govuk-label--l '
     },
-    "id": "",
+    "id": "text-input-l",
     "name": "text-input-l"
   }) }}
 
@@ -96,7 +96,7 @@
       "text": "<label> govuk-label--m",
       classes: 'govuk-label--m'
     },
-    "id": "",
+    "id": "text-input-m",
     "name": "text-input-m"
   }) }}
 
@@ -105,7 +105,7 @@
       "text": "<label> govuk-label--s",
       classes: 'govuk-label--s'
     },
-    "id": "",
+    "id": "text-input-s",
     "name": "text-input-s"
   }) }}
 
@@ -114,8 +114,8 @@
       "text": "<label> No class",
       classes: ''
     },
-    "id": "",
-    "name": "text-input-no-class-2"
+    "id": "text-input-no-class",
+    "name": "text-input-no-class"
   }) }}
 
   <hr class="govuk-section-break govuk-section-break--xl govuk-section-break--visible">
@@ -133,7 +133,7 @@
     "hint": {
       "html": "It’s on your National Insurance card, benefit letter, payslip or P60. For example, ‘QQ 12 34 56 C’."
     },
-    "id": "",
+    "id": "text-input-hint-heading-xl",
     "name": "text-input-hint-heading-xl"
   }) }}
 
@@ -146,7 +146,7 @@
     "hint": {
       "html": "It’s on your National Insurance card, benefit letter, payslip or P60. For example, ‘QQ 12 34 56 C’."
     },
-    "id": "",
+    "id": "text-input-hint-heading-l",
     "name": "text-input-hint-heading-l"
   }) }}
 
@@ -159,7 +159,7 @@
     "hint": {
       "html": "It’s on your National Insurance card, benefit letter, payslip or P60. For example, ‘QQ 12 34 56 C’."
     },
-    "id": "",
+    "id": "text-input-hint-heading-m",
     "name": "text-input-hint-heading-m"
   }) }}
 
@@ -172,7 +172,7 @@
     "hint": {
       "html": "It’s on your National Insurance card, benefit letter, payslip or P60. For example, ‘QQ 12 34 56 C’."
     },
-    "id": "",
+    "id": "text-input-hint-heading-s",
     "name": "text-input-hint-heading-s"
   }) }}
 
@@ -185,8 +185,8 @@
     "hint": {
       "html": "It’s on your National Insurance card, benefit letter, payslip or P60. For example, ‘QQ 12 34 56 C’."
     },
-    "id": "",
-    "name": "text-input-hint-no-class"
+    "id": "text-input-hint-heading-no-class",
+    "name": "text-input-hint-heading-no-class"
   }) }}
 
   <h3 class="govuk-heading-s">isPageHeading: false</h3>
@@ -199,7 +199,7 @@
     "hint": {
       "html": "It’s on your National Insurance card, benefit letter, payslip or P60. For example, ‘QQ 12 34 56 C’."
     },
-    "id": "",
+    "id": "text-input-hint-xl",
     "name": "text-input-hint-xl"
   }) }}
 
@@ -211,7 +211,7 @@
     "hint": {
       "html": "It’s on your National Insurance card, benefit letter, payslip or P60. For example, ‘QQ 12 34 56 C’."
     },
-    "id": "",
+    "id": "text-input-hint-l",
     "name": "text-input-hint-l"
   }) }}
 
@@ -223,7 +223,7 @@
     "hint": {
       "html": "It’s on your National Insurance card, benefit letter, payslip or P60. For example, ‘QQ 12 34 56 C’."
     },
-    "id": "",
+    "id": "text-input-hint-m",
     "name": "text-input-hint-m"
   }) }}
 
@@ -235,7 +235,7 @@
     "hint": {
       "html": "It’s on your National Insurance card, benefit letter, payslip or P60. For example, ‘QQ 12 34 56 C’."
     },
-    "id": "",
+    "id": "text-input-hint-s",
     "name": "text-input-hint-s"
   }) }}
 
@@ -247,8 +247,8 @@
     "hint": {
       "html": "It’s on your National Insurance card, benefit letter, payslip or P60. For example, ‘QQ 12 34 56 C’."
     },
-    "id": "",
-    "name": "text-input-hint-no-class-2"
+    "id": "text-input-hint-no-class",
+    "name": "text-input-hint-no-class"
   }) }}
 
   <hr class="govuk-section-break govuk-section-break--xl govuk-section-break--visible">
