Remove bottom margin from navigation on tablets
The intention seems to be to add the 10px margin only when the navigation is displayed inline (desktop), so switch to using a media query instead of using the responsive margin mixin.

(Normally `govuk-responsive-margin(2, "bottom")` would create a 10px bottom margin on both mobile and tablet/desktop, except the margin on mobile is currently overridden by `margin: 0`)

--- a/src/govuk/components/header/_index.scss
+++ b/src/govuk/components/header/_index.scss
@@ -206,11 +206,14 @@
   }
 
   .govuk-header__navigation {
-    @include govuk-responsive-margin(2, "bottom");
     display: block;
     margin: 0;
     padding: 0;
     list-style: none;
+
+    @include govuk-media-query ($from: desktop) {
+      margin-bottom: govuk-spacing(2);
+    }
   }
 
   .js-enabled {
