Make the preview app template examples more realistic
Add basic page content and initialise JavaScript for components so that the pages can be used for tests.

--- a/app/views/examples/template-custom/index.njk
+++ b/app/views/examples/template-custom/index.njk
@@ -130,5 +130,6 @@
 {% block bodyEnd %}
   <!-- block:bodyEnd -->
   <script src="/public/all.js"></script>
+  <script>window.GOVUKFrontend.initAll()</script>
   <!-- endblock:bodyEnd -->
 {% endblock %}
