Make list margins above and below equal
The previous implementation had the margin above the list set to 40px on desktop
and 25px on mobile, and the margin below the list set to 30px at all breakpoints.

This commit makes the margins equal - it reduces the top margin to 30px as it was
felt that the 40px made the list too far away from the heading.

--- a/src/govuk/components/footer/_index.scss
+++ b/src/govuk/components/footer/_index.scss
@@ -136,12 +136,13 @@
   }
 
   .govuk-footer__heading {
-    @include govuk-responsive-margin(7, "bottom");
+    margin-bottom: govuk-spacing(6);
     padding-bottom: govuk-spacing(4);
+    border-bottom: 1px solid $govuk-footer-border;
+
     @include govuk-media-query ($until: tablet) {
       padding-bottom: govuk-spacing(2);
     }
-    border-bottom: 1px solid $govuk-footer-border;
   }
 
   .govuk-footer__navigation {
