Don't pre-select radio buttons
The radio button examples had the 'No' radio pre-selected, but we don't
recommend pre-selecting in our guidance and none of the other examples
on this page have any preselected/pre-populated inputs.

The `checked` attribute was already present in the code, but wasn't working
properly because of the duplicate names/ids. Now that we fixed that, it had
the unintentional effect of making the `checked` code work.

This commit removes the `checked` attribute from the radio button examples.

--- a/app/views/examples/labels-legends-and-headings/index.njk
+++ b/app/views/examples/labels-legends-and-headings/index.njk
@@ -1440,8 +1440,7 @@
       },
       {
         "value": "no",
-        "text": "No",
-        "checked": true
+        "text": "No"
       }
     ]
   }) }}
@@ -1467,8 +1466,7 @@
       },
       {
         "value": "no",
-        "text": "No",
-        "checked": true
+        "text": "No"
       }
     ]
   }) }}
@@ -1494,8 +1492,7 @@
       },
       {
         "value": "no",
-        "text": "No",
-        "checked": true
+        "text": "No"
       }
     ]
   }) }}
@@ -1521,8 +1518,7 @@
       },
       {
         "value": "no",
-        "text": "No",
-        "checked": true
+        "text": "No"
       }
     ]
   }) }}
@@ -1548,8 +1544,7 @@
       },
       {
         "value": "no",
-        "text": "No",
-        "checked": true
+        "text": "No"
       }
     ]
   }) }}
@@ -1576,8 +1571,7 @@
       },
       {
         "value": "no",
-        "text": "No",
-        "checked": true
+        "text": "No"
       }
     ]
   }) }}
@@ -1602,8 +1596,7 @@
       },
       {
         "value": "no",
-        "text": "No",
-        "checked": true
+        "text": "No"
       }
     ]
   }) }}
@@ -1628,8 +1621,7 @@
       },
       {
         "value": "no",
-        "text": "No",
-        "checked": true
+        "text": "No"
       }
     ]
   }) }}
@@ -1654,8 +1646,7 @@
       },
       {
         "value": "no",
-        "text": "No",
-        "checked": true
+        "text": "No"
       }
     ]
   }) }}
@@ -1680,8 +1671,7 @@
       },
       {
         "value": "no",
-        "text": "No",
-        "checked": true
+        "text": "No"
       }
     ]
   }) }}
@@ -1716,8 +1706,7 @@
       },
       {
         "value": "no",
-        "text": "No",
-        "checked": true
+        "text": "No"
       }
     ]
   }) }}
@@ -1746,8 +1735,7 @@
       },
       {
         "value": "no",
-        "text": "No",
-        "checked": true
+        "text": "No"
       }
     ]
   }) }}
@@ -1776,8 +1764,7 @@
       },
       {
         "value": "no",
-        "text": "No",
-        "checked": true
+        "text": "No"
       }
     ]
   }) }}
@@ -1806,8 +1793,7 @@
       },
       {
         "value": "no",
-        "text": "No",
-        "checked": true
+        "text": "No"
       }
     ]
   }) }}
@@ -1836,8 +1822,7 @@
       },
       {
         "value": "no",
-        "text": "No",
-        "checked": true
+        "text": "No"
       }
     ]
   }) }}
@@ -1867,8 +1852,7 @@
       },
       {
         "value": "no",
-        "text": "No",
-        "checked": true
+        "text": "No"
       }
     ]
   }) }}
@@ -1896,8 +1880,7 @@
       },
       {
         "value": "no",
-        "text": "No",
-        "checked": true
+        "text": "No"
       }
     ]
   }) }}
@@ -1925,8 +1908,7 @@
       },
       {
         "value": "no",
-        "text": "No",
-        "checked": true
+        "text": "No"
       }
     ]
   }) }}
@@ -1954,8 +1936,7 @@
       },
       {
         "value": "no",
-        "text": "No",
-        "checked": true
+        "text": "No"
       }
     ]
   }) }}
@@ -1983,8 +1964,7 @@
       },
       {
         "value": "no",
-        "text": "No",
-        "checked": true
+        "text": "No"
       }
     ]
   }) }}
@@ -2022,8 +2002,7 @@
       },
       {
         "value": "no",
-        "text": "No",
-        "checked": true
+        "text": "No"
       }
     ]
   }) }}
@@ -2055,8 +2034,7 @@
       },
       {
         "value": "no",
-        "text": "No",
-        "checked": true
+        "text": "No"
       }
     ]
   }) }}
@@ -2088,8 +2066,7 @@
       },
       {
         "value": "no",
-        "text": "No",
-        "checked": true
+        "text": "No"
       }
     ]
   }) }}
@@ -2121,8 +2098,7 @@
       },
       {
         "value": "no",
-        "text": "No",
-        "checked": true
+        "text": "No"
       }
     ]
   }) }}
@@ -2154,8 +2130,7 @@
       },
       {
         "value": "no",
-        "text": "No",
-        "checked": true
+        "text": "No"
       }
     ]
   }) }}
@@ -2188,8 +2163,7 @@
       },
       {
         "value": "no",
-        "text": "No",
-        "checked": true
+        "text": "No"
       }
     ]
   }) }}
@@ -2220,8 +2194,7 @@
       },
       {
         "value": "no",
-        "text": "No",
-        "checked": true
+        "text": "No"
       }
     ]
   }) }}
@@ -2252,8 +2225,7 @@
       },
       {
         "value": "no",
-        "text": "No",
-        "checked": true
+        "text": "No"
       }
     ]
   }) }}
@@ -2284,8 +2256,7 @@
       },
       {
         "value": "no",
-        "text": "No",
-        "checked": true
+        "text": "No"
       }
     ]
   }) }}
@@ -2316,8 +2287,7 @@
       },
       {
         "value": "no",
-        "text": "No",
-        "checked": true
+        "text": "No"
       }
     ]
   }) }}
